# integration

./: .gitignore  CMakeLists.txt  Cuba  README.md  cubature
Cuba-4.2/: config.status  demo-c  demo-fortran  makefile
cubature-1.0.2/: CMakeLists.txt
inc/: cuba_wrappers.hpp  cubature_wrappers.hpp  gsl_wrappers.hpp  integrator.hpp
src/: CMakeLists.txt  cubatest.cpp  test.cpp  test_genz.cpp  test_integrands.hpp
